2004-11-06 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/TestAssert.h: integrated Neil Ferguson patch for high
    precision conversion to string for double number. Modified the patch
    to works even if DBL_DIG C99 macro is not defined.

2004-11-05 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/TestAssert.h:
  * src/cppunit/TestAssert.cpp: integrated Neil Ferguson patch for missing
    _MESSAGE assertion variants. Also enhanced the failure message of a 
    few assertions.

2004-09-10 Baptiste Lepilleur <gaiacrtn@free.fr>

  * src/msvc6/DSPlugIn/StdAfx.h: add #error to prevent compilation on VC 7.

  * src/msvc6/testrunner/MsDevCallerListCtrl.cpp:
  * src/msvc6/testrunner/MsDevCallerListCtrl.h: integrated go to source line
    features on double click contributed by Max Quatember and 
    Andreas Pfaffenbichler.

2004-08-01 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/XmlOutputter.h:
  * include/cppunit/tools/XmlDocument.h:
  * src/cppunit/XmlDocument.cpp:
  * src/cppunit/XmlOutputter.cpp: integrated patch #997006 from Akos Maroy. 
    This patch makes the 'standalone' attribute in XML header optional.

2004-06-25 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/Portability.h: moved OStringStream alias definition to
    portability/Stream.h. User need to define EVC4 to indicate that 
    config-evc4.h should be used. (how to we detect this automatically ?).
    Notes that this means it might be needed to add #include <string> to some
    headers since its no longer included by Portability.h.

  * include/cppunit/portability/Stream.h: define alias OStringStream, stdCOut(), 
    and OFileStream. If CPPUNIT_NO_STREAM is defined (evc4 config), then provides
    our own implementation (based on sprintf and fwrite).

  * include/cppunit/config/config-evc4.h: config file for embedded visual c++ 4.
    Still need to detect for this platform in Portability.h (currently relying on
    EVC4 being defined...)
